# l-cpp

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
labs/00/: CMakeLists.txt  report.tex  task03.cpp  task04.cpp
labs/00/tasks/: task01.cpp  task02.cpp  task05.cpp
labs/01/: CMakeLists.txt  README.md
labs/01/01_task/: CMakeLists.txt  README.md  main.cpp  modifiers.cpp  modifiers.h
labs/01/02_task/: CMakeLists.txt  README.md  const_utils.cpp  const_utils.h  main.cpp
labs/01/03_task/: CMakeLists.txt  README.md  array_utils.cpp  array_utils.h  main.cpp
labs/01/04_task/: CMakeLists.txt  README.md  array_utils.cpp  array_utils.h  main.cpp
labs/01/05_task/: CMakeLists.txt  README.md  main.cpp  matrix_utils.cpp  matrix_utils.h
labs/02/: CMakeLists.txt
labs/02/01_task/: CMakeLists.txt  README.md  main.cpp
labs/02/01_task/include/: benchmark.h  utils.h
labs/02/01_task/results/: vector_push_back.txt  vector_push_front.txt  vector_random_access.txt  vector_random_erase.txt  (+1 more)
labs/02/02_task/: CMakeLists.txt  README.md  main.cpp
labs/03/: CMakeLists.txt
labs/03/01task/: CMakeLists.txt  README.md  logger.cpp  logger.h  main.cpp
labs/03/02task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp
labs/03/03task/: CMakeLists.txt  README.md  main.cpp  wrapper.h  wrapper_a.cpp  wrapper_b.cpp
labs/03/04task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp  tracked_string.h
labs/03/05task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp  tracked_string.h
labs/03/06task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp  tracked_string.h
labs/04/: CMakeLists.txt
labs/04/01_task/: CMakeLists.txt  README.md  main.cpp
labs/04/02_task/: CMakeLists.txt  README.md  main.cpp
labs/04/03_task/: CMakeLists.txt  README.md  main.cpp
labs/04/04_task/: CMakeLists.txt  README.md  main.cpp
labs/04/05_task/: CMakeLists.txt  README.md  main.cpp
labs/04/06_task/: CMakeLists.txt  README.md  main.cpp
labs/04/07_task/: CMakeLists.txt  README.md  main.cpp
labs/04/08_task/: CMakeLists.txt  README.md  main.cpp
labs/04/09_task/: CMakeLists.txt  README.md  main.cpp
labs/04/include/: circle.h  figure.h  rectangle.h
labs/04/src/: circle.cpp  figure.cpp  rectangle.cpp
template/: main.cpp
(+11 files in other folders)
